# tydomio

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit-pylint.yml
tydomio/: __init__.py  cli.py  client.py  error.py  globals.py  model.py  requests.py  response.py  state.py
tydomio/model/: __init__.py  config.py  data.py
