[project]
name = "tydomio"
version = "0.0.1"
description = "Async client API"
authors = [
    {name = "Stéphane Pinchaux", email = "stephane@ggwp.me"},
]
dependencies = [
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "GPL3"}
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]

[tool.setuptools.packages.find]
include = ["tydomio.*"]

[project.optional-dependencies]
dev = [
  "coverage",
  "pre-commit",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "PYI", # flake8-pyi
    "UP", # pyupgrade
    "RUF", # ruff
    "W",  # pycodestyle
    "PIE", # flake8-pie
    "PGH004", # pygrep-hooks - Use specific rule codes when using noqa
    "PLE", # pylint error
    "PLW", # pylint warning
    "PLC", # pylint convention
    "PLR", # pylint refactor
]
ignore = [
    "D203", # `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible
    "D213", # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible
]

[tool.pylint]
py-version=3.12
disable=[
    "too-few-public-methods",
]
