[project]
name = "tydomio"
version = "0.0.1"
description = "Async client API"
authors = [
    {name = "Stéphane Pinchaux", email = "stephane@ggwp.me"},
]
dependencies = [
    "websockets==12.0",
    "urllib3==2.2.1",
    "httpx==0.27.0",
    "pydantic==2.11.3",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "GPL3"}
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]

[tool.uv]
dev-dependencies = [
  "coverage==7.8.0",
  "pre-commit==4.1.0",
  "pylint==3.3.5",
]

package = true

[project.scripts]
tydomio = "tydomio.cli:_main"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle
    "F",  # pyflakes
    "I",  # isort
    "PYI", # flake8-pyi
    "UP", # pyupgrade
    "RUF", # ruff
    "W",  # pycodestyle
    "PIE", # flake8-pie
    "PGH004", # pygrep-hooks - Use specific rule codes when using noqa
    "PLE", # pylint error
    "PLW", # pylint warning
    "PLC", # pylint convention
    "PLR", # pylint refactor
]
ignore = [
    "D203", # `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible
    "D213", # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible
    "PLR0913", # nope, I don't realy have too many arguments in my constructor
]

[tool.pylint.main]
py-version=3.12

[tool.pylint."messages control"]
disable=[
    "too-few-public-methods",
    "too-many-instance-attributes",
    "too-many-arguments",
    "missing-class-docstring",
    "too-many-positional-arguments",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "httpx",
    "websockets",
    "websockets.auth",
]
ignore_missing_imports = true
